# markterm

./: CLAUDE.md  Cargo.toml  README.md
src/: main.rs  pager.rs  parser.rs  renderer.rs  style.rs  terminal.rs
tests/fixtures/: sample.md
